# jobcan-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  config.toml.example
src/: config.rs  main.rs  slack.rs
