[package]
name = "jobcan-bot"
version = "1.0.0"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.23.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
clap = "3.0.0-beta.2"
chrono = { version = "0.4.*", features = ["serde"] }
thiserror = "1.0"
toml = "0.5"
color-eyre = "0.5"
