[package]
name = "jobcan-bot"
version = "2.0.0"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.23.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
log = "0.4"
clap = "3.0.0-beta.4"
chrono = { version = "0.4.*" }
thiserror = "1.0"
color-eyre = "0.5"
dotenv = "0.15"
env_logger = "0.9"
slack-morphism="0.8"
slack-morphism-models="0.8"
slack-morphism-hyper="0.8"
